--- a/css/main.css
+++ b/css/main.css
@@ -15,3 +15,50 @@ body {
     src: local('Bukhari Script'), url('https://fonts.cdnfonts.com/s/57472/BukhariScript-Regular.woff') format('woff');
 }
 
+.menu {
+  display: inline-block;
+  position: relative;
+}
+.menu-content {
+  display: none;
+  position: absolute;
+  width: 100%;
+  overflow: auto;
+  box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.4);
+}
+.menu:hover .menu-content {
+  display: block;
+}
+.menu-content a {
+  display: block;
+  color: #000000;
+  padding: 5px;
+  text-decoration: none;
+}
+.menu-content a:hover {
+  color: #FFFFFF;
+  background-color: #00A4BD;
+}
+
+.button {
+  background-color: #ff8c69; /* Salmon */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
+
+.button a:hover {
+  background-color: #ff8c59; /* Light Orange */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
+
