--- a/css/main.css
+++ b/css/main.css
@@ -16,9 +16,17 @@ body {
 }
 
 .menu {
+  background-color: #ff8c69; /* Salmon */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
   display: inline-block;
-  position: relative;
+  font-size: 16px;
 }
+
+
 .menu-content {
   display: none;
   position: absolute;
@@ -51,7 +59,7 @@ body {
   font-size: 16px;
 }
 
-.button a:hover {
+.menu:hover {
   background-color: #ff8c59; /* Light Orange */
   border: none;
   color: white;
