--- a/css/main.css
+++ b/css/main.css
@@ -21,6 +21,7 @@ body {
 }
 
 .menubutton {
+  transition-duration: 0.4s;
   background-color: #ff8c69; /* Salmon */
   border: none;
   color: white;
@@ -36,6 +37,7 @@ body {
   display: none;
   position: absolute;
   width: 100%;
+  background-color: #ff8c59;
   overflow: auto;
   box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.4);
 }
@@ -44,7 +46,7 @@ body {
 }
 .menu-content a {
   display: block;
-  color: #ff8c59;
+  color: #00000;
   padding: 5px;
   text-decoration: none;
 }
